these are some small changes to practice git.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>odin-reciepes</h1>
-    <a href="biriyani.html">Biriyani</a>
+    <a href="reciepes/biriyani.html">Biriyani</a><br>
+    <a href="reciepes/beef-stew.html">beef-stew</a><br>
+    <a href="reciepes/chicken-stew.html">chicken-stew</a><br>
 </body>
 </html>
