--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>odin-reciepes</title>
 </head>
 <body>
-    <h1>odin-reciepes</h1>
+    <h1>odin-reciepes</h1><br>
+    <p><h3><strong>Welcome</strong> If you want be your home <em>chef</em>, then you are in the right place.</h3></p><br>
+    <p><h3>These are the three reciepes, that you will definitely love.</h3></p><BR>
+    <p><h3>HAPPY COOKING !!!</h3></p>
+    <img src="images/image.webp"><br>
     <a href="reciepes/biriyani.html">Biriyani</a><br>
     <a href="reciepes/beef-stew.html">beef-stew</a><br>
     <a href="reciepes/chicken-stew.html">chicken-stew</a><br>
