--- a/reciepes/biriyani.html
+++ b/reciepes/biriyani.html
@@ -7,6 +7,36 @@
     <title>biriyani</title>   
 </head>
 <body>
-    <h1>Biriyani</h1>
+    <h1>Biriyani</h1><hr><br>
+    <img src="../images/Chicken-Biryani.jpg">
+    <h3>DESCRIPTION:</h3>
+    <p><h4>
+
+        Behold! An authentic Chicken Biryani recipe with simple, easy-to-follow instructions (no curveballs!) and mouthwatering, traditional Pakistani and Indian flavor. This recipe includes tips on how to get fluffy rice, tender chicken, and the distinct biryani taste. Tested to perfection!
+        Chicken Biryani on a gold-trimmed platter with a silver rice spoon resting on the side</h4></p><hr>
+     <h3>Ingredients:</h3>
+     <ul>
+         <li>Oil/Ghee</li>
+         <li>Onions</li>
+         <li>Bone-in, cut up, skinless chicken</li>
+         <li>whole spices</li>
+         <li>Garlic + Ginger</li>
+         <li>tomato</li>
+         <li>yogurt</li>
+         <li>rice</li>
+         <li>Dried Plums (Alu Bukhara)</li>
+     </ul><hr> 
+     <h3>Steps:</h3> 
+     <ol>
+         <li>Marinate the chicken in spices and yogurt. This infuses the chicken with noticeable flavor. Ideally, marinate overnight or for at least a couple hours, but I tested and found that it’s still very tasty if you marinate just before making the biryani.</li>
+         <li>Take the chicken out of the fridge before you start preparing the biryani. Allowing the chicken to come closer to room temperature helps it cook more evenly and stay tender.</li>
+         <li>Lastly, after sautéing the chicken in the hot oil, add water and allow the chicken to simmer gently, covered, over low heat.</li>
+         <li>At 3 minutes, the rice still has a raw center.</li>
+         <li>At 4 minutes, the center has mostly cooked, but the rice kernel is still tough.</li>
+         <li>Around 5 minutes, the rice starts to swell and the rice is just-cooked. In between 5 minutes and 5:30 seconds is when it’s ideal to stop boiling the rice.</li>
+         <li>At 6 minutes, the rice is cooked, but starts to break easily without getting mushy.</li>
+         <li>    In between 7-8 minutes, the rice gets mushy once pressed between your fingers. This is a sign that it’s overcooked and is more likely to break during the ‘dum’ stage.</li>
+     </ol><hr><br>
+     <a href="../index.html">HomePage</a>
 </body>
 </html>
