basic project completed

--- a/reciepes/beef-stew.html
+++ b/reciepes/beef-stew.html
@@ -7,6 +7,36 @@
     <title>beef-stew</title>
 </head>
 <body>
-    <h1>beef-stew</h1>
+    <h1>beef-stew</h1><hr>
+    <img src="../images/beef-stew.jpg">
+    <h3>Description:</h3>
+    <p><h4>This classic French beef stew, otherwise known as Beef Bourguignon, is the ultimate comfort food. Chunks of well-marbled beef are seared in olive oil  and then gently braised with garlic and onions in a wine-based broth. After a few hours in the oven, the meat becomes meltingly tender and enveloped in a rich, deeply flavored sauce.
+
+        It takes some time to make but I promise it’s well worth the effort. Aside from being delicious — it is my all-time most popular recipe — it’s a one-pot meal that feeds a crowd. You can also make it a day ahead; in fact, you should because the flavor improves the longer it sits.
+    </h4></p><hr>
+    <h3>Ingredients:</h3><hr>
+    <ul>
+        <li>3 pounds boneless beef chuck (well-marbled), cut into 1-1/2-inch pieces</li>
+        <li>2 teaspoons salt</li>
+        <li>1 teaspoon freshly ground black pepper</li>
+        <li>7 cloves garlic, peeled and smashed</li>
+        <li>1-1/2 tablespoons tomato paste</li>
+        <li>2 cups beef broth </li>
+        <li>/2 teaspoon dried thyme</li>
+        <li>1 pound small white boiling potatoes (baby yukons), cut in half
+            Fresh chopped parsley, for serving (optional)</li>
+    </ul><hr>
+    <h3>Steps:</h3><hr>
+    <ol>
+        <li>first cut the beef whatever size you need.</li>
+        <li>his step is a bit time-consuming but browning the meat adds depth and dimension to the stew. (Note: it’s important not to crowd the pan — if you try to brown all the meat at once, it will steam instead of sear and you won’t get all that lovely color and flavor.)</li>
+        <li>Remove the meat and add the onions, garlic, and balsamic vinegar to the pan. The vinegar will loosen all the brown.</li>
+        <li>Add the wine, broth, water, thyme, bay leaves, and sugar.</li>
+        <li>After 2 hours, add the carrots and potatoes.</li>
+        <li>Return to the oven and continue cooking for one hour, or until the meat is fork-tender, the broth is thickened, and the carrots and potatoes are tender.</li>
+    </ol><hr>
+    <a href="../index.html">HomePage</a>
+
+
 </body>
 </html>
