--- a/reciepes/biriyani.html
+++ b/reciepes/biriyani.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Biriyani</h1><hr><br>
-    <img src="../images/Chicken-Biryani.jpg">
+    <img src="../images/biryani.jpeg">
     <h3>DESCRIPTION:</h3>
     <p><h4>
 
