--- a/reciepes/chicken-stew.html
+++ b/reciepes/chicken-stew.html
@@ -8,5 +8,31 @@
 </head>
 <body>
     <h1>chicken-stew</h1>
-</body>
+    <img src="../images/chicken-stew.jpeg">
+    <h3>Description:</h3><hr>
+    <p><h4>
+        Video Player is loading.
+        
+        Looking for a hearty, healthy dinner? This chicken stew takes under an hour, but it tastes like it's been simmering on the stove for hours. Serve with a hearty piece of toasted </h4></p><hr>
+     <h3>Ingredients:</h3>
+     <ul>
+         <li> 2 large carrots, peeled and sliced into coins </li>
+         <li>Freshly ground black pepper</li>
+         <li> 3 cloves garlic, minced </li>
+         <li> 1 1/2 lb. boneless skinless chicken breasts </li>
+         <li>baby corn</li>
+         <li>bay leaf</li>
+         <li>3 sprigs fresh thyme</li>
+         <li>fresh mint leaves</li>
+         <li>parsle</li>
+     </ul><hr>
+     <h3>Steps:</h3>
+     <ol>
+         <li>In a large pot over medium heat, melt butter. Add carrots and celery and season with salt and pepper. Cook, stirring often, until vegetables are tender, about 5 minutes. Add garlic and cook until fragrant, about 30 seconds.</li>
+         <li>Add flour and stir until vegetables are coated, then add chicken, thyme, bay leaf, potatoes, and broth. Season with salt and pepper. Bring mixture to a simmer and cook until the chicken is no longer pink and potatoes are tender, 15 minutes.</li>
+         <li>Remove from heat and transfer chicken to a medium bowl. Using two forks, shred chicken into small pieces and return to pot</li>
+         <li>Garnish with parsley before serving.</li>    
+        </ol><hr>
+        <a href="../index.html">HomePage</a>  
+    </body>
 </html>
